--- a/public/index.html
+++ b/public/index.html
@@ -39,12 +39,12 @@ Software.
     />
     <script
       defer
-      data-site="YOUR_DOMAIN_HERE"
+      data-site="https://progrowth.coach"
       src="https://api.nepcha.com/js/nepcha-analytics.js"
     ></script>
   </head>
 
-  <body>
+  <body style="background-color: #dddbd7;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="app"></div>
   </body>
